# SQFVM.runtime

./: .editorconfig  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml  container.yml
docker/: Dockerfile
